--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- Write your HTML in this file -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Bonnie's HTML</title>
+    
+  </head>
+ 
+  <body>
+    <h1> This is a title!!! </h1>
+    <p> This is a body graph</p>
+   
+  </body>
+  
+</html>
+
