--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<HTML>
+  <head>
+    <title>This is the title!</title>
+  </head>
+  <body>
+    <p>This is the body!</p>
+  </body>
+</HTML>
